Add method CreateUsers

--- a/AttributeValidation/AttributeValidation.csproj
+++ b/AttributeValidation/AttributeValidation.csproj
@@ -50,6 +50,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\Attributes\Attributes.csproj">
+      <Project>{A7B17235-C276-40DF-9284-2F18D312E62F}</Project>
+      <Name>Attributes</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
