--- a/AttributeValidation/AttributeValidation.csproj
+++ b/AttributeValidation/AttributeValidation.csproj
@@ -45,6 +45,8 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UserCreator.cs" />
+    <Compile Include="ValidationException.cs" />
     <Compile Include="Validator.cs" />
   </ItemGroup>
   <ItemGroup>
